--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="light_grey">#EEEEEE</color>
+    <color name="light_grey">#EAE0E0</color>
+    <color name="dull_red">#B2533E</color>
 </resources>
